# svlbisim

./: README.md  driver.py  driver_animate.py  inputs.yaml  make_mring.py  mcmc_analysis.py  mcmc_full_ellipse.py  mcmc_inputs.yaml  model_vis_rings.py  numpyro_slice_rice.py  pyproject.toml  result_comparison.py  vis_comparison.py
src/: svlbisim_animate_orbits_uvcov.py  svlbisim_genuvcov.py  svlbisim_griduv.py  svlbisim_image.py  svlbisim_obs.py  svlbisim_plotting.py
svlbisim/: animate_orbits_uvcov.py  genuvcov.py  griduv.py  input_reader.py  observe.py  plotting.py
svlbisim_runs/folder_SgrA_75K/: output_file_fft.fits  output_file_gridded.uvfits  used_inputs.yaml
svlbisim_runs/folder_SgrA_no_noise/: output_file_fft.fits  output_file_gridded.uvfits  output_file_reconstruction.fits  used_inputs.yaml
svlbisim_runs/folder_SgrA_noise/: output_file_fft.fits  output_file_gridded.uvfits  used_inputs.yaml
svlbisim_runs/folder_kgeo_a0.99_i30/: output_file_a0.99_i30_fft.fits  output_file_a0.99_i30_gridded.uvfits  output_file_a0.99_i30_reconstruction.fits  used_inputs.yaml
svlbisim_runs/folder_kgeo_spin_0.01/: output_file_spin_0.01_fft.fits  output_file_spin_0.01_gridded.uvfits  output_file_spin_0.01_reconstruction.fits  used_inputs.yaml
svlbisim_runs/folder_kgeo_spin_0.99/: output_file_spin_0.99_fft.fits  output_file_spin_0.99_gridded.uvfits  output_file_spin_0.99_reconstruction.fits  used_inputs.yaml
svlbisim_runs/simulated_mring/: output_mring.uvfits  output_mring_fft.fits  output_mring_gridded.uvfits  output_mring_reconstruction.fits  used_inputs.yaml
(+13 files in other folders)
